--- a/src/routes/Play.module.scss
+++ b/src/routes/Play.module.scss
@@ -114,7 +114,6 @@ header {
   padding: 1rem 2rem;
   display: flex;
   justify-content: space-between;
-
 }
 
 .container {
@@ -139,40 +138,97 @@ header {
   color: var(--white);
 
   figure {
-    border:1px solid red;
+    border: 1px solid red;
     width: 100px;
   }
+
+  border: 4px solid red;
+  // -webkit-animation: move 5s infinite;
+  // animation: move 5s infinite;
 }
+
+// @keyframes move {
+//   0% {
+//     width: 20px;
+//   }
+//   100% {
+//     width: 500px;
+//   }
+// }
+// @-webkit-keyframes move {
+//   0% {
+//     -webkit-width: 20px;
+//   }
+//   100% {
+//     -webkit-width: 500px;
+//   }
+// }
 
 .tongue {
   position: fixed;
   left: calc(50%);
   bottom: 5rem;
-  height: 8px;
+  height: 14px;
   outline: 4px solid rgba(237, 64, 88, 0.2);
   background: #c67ebb;
   border-radius: 999px;
-  width: 0px;
   transform-origin: 0 0;
   transform: rotate(0deg);
   transform: translateX(-50%);
   z-index: 999;
   transition: width ease 0.01s;
+  -webkit-transition:width ease 0.01s;
+
+  --tongue-width: 0;
+  width: var(--tongue-width);
 }
 
 .throwTongue {
-  //width: var(--width);
   animation-name: throwTongue;
   animation-duration: 0.1s;
   animation-delay: 0s;
   animation-iteration-count: 1;
+
+  -webkit-animation-name: throwTongue;
+  -webkit-animation-duration: 0.1s;
+  -webkit-animation-delay: 0s;
+  -webkit-animation-iteration-count: 1;
 }
 
 @keyframes throwTongue {
   to {
-    width: var(--width);
+    width: var(--tongue-width);
   }
 }
+@-webkit-keyframes throwTongue {
+  to {
+    -webkit-width: var(--tongue-width);
+  }
+}
+
+.HidethrowTongue {
+  animation-name: HidethrowTongue;
+  animation-duration: 0.1s;
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+
+  -webkit-animation-name: HidethrowTongue;
+  -webkit-animation-duration: 0.1s;
+  -webkit-animation-delay: 0s;
+  -webkit-animation-iteration-count: 1;
+}
+
+@keyframes HidethrowTongue {
+  to {
+    width: var(--tongue-width);
+  }
+}
+@-webkit-keyframes throwTongue {
+  to {
+    -webkit-width: var(--tongue-width);
+  }
+}
+
 
 .fly {
   position: absolute;
