--- a/src/routes/Level.module.scss
+++ b/src/routes/Level.module.scss
@@ -52,7 +52,8 @@
     width: 180px;
     height: 104px;
     color: var(--color-secondary);
-    font-size: 1rem;
+    font-size: 1.4rem;
+    font-weight: bold;
     background: none;
     color: var(--color-tertiary);
     background-image: url('./../assets/lotus.svg');
