--- a/src/routes/Play.module.scss
+++ b/src/routes/Play.module.scss
@@ -43,59 +43,6 @@
   }
 }
 
-.nav {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  padding: 1rem 1rem;
-  column-gap: 0.2rem;
-
-  li {
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 57px;
-    height: 57px;
-    cursor: pointer;
-
-    &:hover {
-      animation-duration: 0.8s;
-      animation-delay: 0s;
-      animation-name: animate-fade;
-      animation-timing-function: ease-in;
-      animation-fill-mode: backwards;
-      animation-iteration-count: 2;
-    }
-
-    &:active {
-      transform: scale(0.9);
-    }
-
-    &:nth-child(1) {
-      background-image: url('./../assets/icon-home.svg');
-    }
-
-    &:nth-child(2) {
-      background-image: url('./../assets/icon-menu.svg');
-    }
-    &:nth-child(3) {
-      background-image: url('./../assets/icon-trophy.svg');
-    }
-
-    &:nth-child(4) {
-      background-image: url('./../assets/icon-info.svg');
-    }
-    &:nth-child(5) {
-      background-image: url('./../assets/icon-users.svg');
-    }
-    &:nth-child(6) {
-      background-image: url('./../assets/icon-mute.svg');
-      margin-left: auto;
-    }
-  }
-}
-
 @keyframes animate-fade {
   0% {
     opacity: 0.5;
@@ -124,45 +71,54 @@ header {
   background-image: url('./../assets/leaf.svg');
   background-repeat: no-repeat;
   background-position: bottom center;
+  background-size: 240px;
 }
 
 .header {
   padding: 1rem 1rem;
 }
 
-.score {
+figure.score {
   display: flex;
   flex-direction: row;
   align-items: center;
   column-gap: 1rem;
   color: var(--white);
 
-  figure {
-    border: 1px solid red;
-    width: 100px;
+ img {
+    width: 4vw;
   }
 
-  border: 4px solid red;
-  // -webkit-animation: move 5s infinite;
-  // animation: move 5s infinite;
+  figcaption {
+    font-size: 6vw;
+  }
 }
 
-// @keyframes move {
-//   0% {
-//     width: 20px;
-//   }
-//   100% {
-//     width: 500px;
-//   }
-// }
-// @-webkit-keyframes move {
-//   0% {
-//     -webkit-width: 20px;
-//   }
-//   100% {
-//     -webkit-width: 500px;
-//   }
-// }
+.timer {
+  font-size: 6vw;
+  color: var(--white);
+}
+
+figure.frog {
+  position: absolute;
+  left: 50%;
+  bottom: 1.5rem;
+  margin: 0;
+  text-align: center;
+  transform: translate(-50%);
+  width: 140px;
+
+  &:after {
+    content: '';
+    background-image: url('./assets/lotus.svg');
+    background-repeat: no-repeat;
+    background-position: 1rem center;
+    background-size: 25%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+}
 
 .tongue {
   position: fixed;
@@ -240,25 +196,4 @@ header {
   animation-direction: alternate;
   -webkit-tap-highlight-color: none;
   cursor: grab;
-}
-
-.frog {
-  position: absolute;
-  left: 50%;
-  bottom: 0;
-  margin: 0;
-  text-align: center;
-  transform: translate(-50%);
-  width: 20vw;
-
-  &:after {
-    content: '';
-    background-image: url('./assets/lotus.svg');
-    background-repeat: no-repeat;
-    background-position: 1rem center;
-    background-size: 25%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
 }
